...
  @override
  Widget build(BuildContext context) {
    //Content about buttons
    final List content = [
      //A button to contiune as a teacher
      CustomButton(
        key: Key("buttonTeacher"),
        onpressed: () {
          Navigator.push(
              context, MaterialPageRoute(builder: (context) => TeacherLogin()));
        },
        text: "Öğretmen olarak devam et",
      ),
...
